--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
     "@types/gapi": "0.0.39",
+    "firebase": "^8.4.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
