--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "@types/gapi": "0.0.39",
     "firebase": "^8.4.1",
+    "firebase-admin": "^9.7.0",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
