--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
+    "@sendgrid/mail": "^7.4.5",
     "@tailwindcss/forms": "^0.3.2",
     "@types/gapi": "0.0.39",
     "firebase": "^8.4.1",
