--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/gapi": "0.0.39",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.7.0",
+    "html-loader": "^0.5.5",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
