docker hosting working with gcp cloud run

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths" : {
+      "@/public/*": ["public/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -21,9 +25,10 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules"
   ]
 }
+
