--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths" : {
-      "@/public/*": ["public/*"]
+      "@/public/*": ["public/*"],
+      "@/components/*":["components/*"]
     },
     "target": "es5",
     "lib": [
