--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,14 @@
 steps:
+- name: 'creat adminsdk file for firebase'
+  secretEnv: ['FIREBASE_ADMIN_SDK']
+  args: ['echo', '$$FIREBASE_ADMIN_SDK', '>', './adminsdk.json']
 - name: 'gcr.io/cloud-builders/docker'
   secretEnv: ['REACT_APP_GOOGLE_MAPS_API_KEY']
   args: ['build', '-t', 'gcr.io/wedding-site-311102/wedding-site', '.', '--build-arg', 'GOOGLE_MAPS_API_KEY=$$REACT_APP_GOOGLE_MAPS_API_KEY']
+  images: ['gcr.io/wedding-site-311102/wedding-site']
 availableSecrets:
   secretManager:
   - versionName: projects/wedding-site-311102/secrets/google-maps-api-key/versions/1
     env: 'REACT_APP_GOOGLE_MAPS_API_KEY'
+  - versionName: projects/wedding-site-311102/secrets/firebase-admin-sdk/versions/1
+    env: 'FIREBASE_ADMIN_SDK'
