html work + yaml fix

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
        - '-c'
        - |
          echo $$FIREBASE_ADMIN_SDK > ./adminsdk.json &&
-         docker build . -t gcr.io/wedding-site-311102/wedding-site --build-arg GOOGLE_MAPS_API_KEY=$$REACT_APP_GOOGLE_MAPS_API_KEY 
+         docker build . -t gcr.io/wedding-site-311102/wedding-site --build-arg REACT_APP_GOOGLE_MAPS_API_KEY=$$REACT_APP_GOOGLE_MAPS_API_KEY 
  # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
