--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "set EMAIL='noreply@domandfrankie.wedding' & next dev",
+    "dev": "set EMAIL=noreply@domandfrankie.wedding & next dev",
     "build": "next build",
     "start": "next start"
   },
