--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-responsive-masonry": "^2.1.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
