--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/gapi": "0.0.39",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.7.0",
+    "hamburger-react": "^2.4.1",
     "html-loader": "^0.5.5",
     "next": "10.1.3",
     "react": "17.0.2",
